--- a/SE/static/styles/customstyles.css
+++ b/SE/static/styles/customstyles.css
@@ -882,14 +882,14 @@ p[contenteditable="false"],h4[contenteditable="false"]{
     padding: 20px;
     width: 15%;
     top: 150px;
-    right:100px;
+    right:80px;
     z-index:5;
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.3);
     text-align: center;
 }
 
 #register-2{
-    top:350px;
+    top:390px;
     background:white;
 }
 
@@ -1029,9 +1029,6 @@ div[contenteditable='true']{
     outline: none;
 }
 
-.about{
-    border:1px solid rgba(0,0,0,0.1);
-}
 
 div[contenteditable="true"]{
     outline: 0;
@@ -1200,4 +1197,14 @@ input[type="color"]{
     font-weight: bold;
     margin-bottom:5px;
     font-size: 16px;
+}
+
+#register-count{
+    padding:8px;
+    width:200px;
+    border:none;
+    box-shadow: none;
+    background: none;
+    border:1px solid rgba(0,0,0,0.4);
+    display: none;
 }
