--- a/SE/static/styles/navbar.css
+++ b/SE/static/styles/navbar.css
@@ -13,7 +13,7 @@
     z-index:10000;
     font-size:20px;
     box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.3);
-    background:#3e8e3e;
+    background:#fff;
 }
 
 span:hover{
@@ -30,7 +30,7 @@ span:hover{
 
 .navbar a{
     text-decoration: none;
-    color:white;
+    color:#3e8e3e;
     height:100%;
 }
 
@@ -47,5 +47,5 @@ span .material-icons{
     position: relative;
     top:5px;
     margin-right:3px;
-    color:white;
+    color:#3e8e3e;
 }
