--- a/static/styles/customstyles.css
+++ b/static/styles/customstyles.css
@@ -671,19 +671,17 @@ h1{
 
 .loaded-cover-picture{
     position: absolute;
-    overflow: hidden;
     z-index:2;
     top:0px;
     left:0px;
     right:0px;
     width:100%;
-    height:100%;
+    height:250px;
     overflow: hidden;
 }
 
 .loaded-cover-picture img{
     width:100%;
-    height:100%;
 }
 
 .close-div i{
@@ -1204,7 +1202,7 @@ input[type="color"]{
     font-size: 16px;
 }
 
-#register-count{
+#registration-count{
     padding:8px;
     width:200px;
     border:none;
@@ -1228,7 +1226,7 @@ input[type="color"]{
 }
 
 .question-box{
-    max-height:35%;
+    max-height:60%;
     width:40%;
     display: none;
     background: white;
