--- a/static/styles/customstyles.css
+++ b/static/styles/customstyles.css
@@ -172,8 +172,8 @@ iframe
     overflow: hidden;
     /*width: 200px;
     height: 200px;*/
-    width: 260px;
-    height: 260px;
+    width: 300px;
+    height: 300px;
     padding: 0px;
     margin: auto;
     /*float: left;*/
@@ -375,6 +375,9 @@ button,input[type="button"]{
     position: relative;
     cursor: pointer;
     transition:0.3s ease all;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .widgets:hover{
@@ -384,7 +387,7 @@ button,input[type="button"]{
 .flex-row-box{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .follow-nav{
@@ -427,8 +430,8 @@ button,input[type="button"]{
 }
 
 .frame-box{
-    height:200px;
-    width:200px;
+    height:300px;
+    width:300px;
     position: relative;
 }
 
@@ -437,7 +440,8 @@ button,input[type="button"]{
     top:0px;
     left:0px;
     right:0px;
-    height:200px;
+    height:300px;
+    width:300px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -445,6 +449,7 @@ button,input[type="button"]{
     margin:0px;
     cursor: pointer;
     transition:0.5s ease all;
+    background:white;
 }
 
 .frame-button i{
@@ -475,6 +480,11 @@ button,input[type="button"]{
     height:360px;
     width:250px;
     border:1px solid rgba(0,0,0,0.3);
+}
+
+.card-img{
+    height:250px;
+    width:250px;
 }
 
 .text-container{
@@ -571,7 +581,6 @@ button,input[type="button"]{
     right:0px;
     width:100%;
     height:100%;
-    display: none;
     overflow: hidden;
     z-index: 3;
 }
@@ -1046,6 +1055,9 @@ input{
 
 .tag-box{
     position: relative;
+}
+
+.filter-tag{
     display: none;
 }
 
